# gameland

account-server/: LEEME.txt  account_database.py  account_defaults.py  account_ranking.py  account_server.py  accounts_cache.py  coder.py  custom_flags.py  payments.py  resource_server.py  server_key.pem  ssl.crt  ssl.key  test_b2_car.py  test_car_control.py  test_collisions.py  test_event_driven_collisions.py  test_fastapi.py  test_game_client.py  test_game_server_controller.py  test_snapshots.py  test_snapshots2.py  test_snapshots_extra.py  test_spline.py  test_udp_client.py  test_websockets.py  utils.py
account-server-golang/: accountserver.cfg  config.go  go.mod  go.sum  launchers_api.go  main.go  paypal_api.go  rate_limiter.go  server_public_key.pem  tests.go  websockets_api.go
account-server-golang/coder/: coder.go
account-server-golang/database/: database.go  interface.go
account-server-golang/gameservers/: gameservers.go
account-server-golang/launchers/: launchers.go
account-server-golang/orders/: orders.go
account-server-golang/origin_updater/: origin_updater.go
account-server-golang/ranking/: ranking.go
account-server-golang/resource_manager/: resource_manager.go  util.go
account-server-golang/server_api/: AUTHENTICATE_SESSION_TICKET.go  BUY_WITH_GOLD.go  GET_GAMESERVER_RESOURCE.go  GET_GAME_RESOURCE.go  LOGIN.go  LOGIN_AS_GUEST.go  MATCHMAKE.go  NOTIFY_GAME_TERMINATED.go  NOTIFY_MATCHMAKER_PLAYER_LEFT.go  PUT_COMMENT.go  READ_GAME_SERVERS.go  READ_RANKING.go  REFRESH_GAMESERVER_INSTANCE_STATE.go  REGISTER_ACCOUNT.go  REGISTER_GAMESERVER_INSTANCE.go  UNREGISTER_GAMESERVER_INSTANCE.go  UPDATE_PLAYER_DATA.go  UPDATE_PLAYER_READONLY_DATA.go  VALIDATE_MACTHMAKER_TICKET.go  internal_GET_RESOURCE.go  server_api.go  server_api_doc.go
account-server-golang/utils/: utils.go
account-server/server_api/: AUTHENTICATE_SESSION_TICKET.py  BUY_WITH_GOLD.py  GET_GAMESERVER_RESOURCE.py  GET_GAME_RESOURCE.py  GET_PLAYER_DATA.py  LOGIN.py  LOGIN_AS_GUEST.py  LOGIN_REQUEST.py  LOGIN_SESSION.py  MATCHMAKE.py  NOTIFY_GAME_TERMINATED.py  NOTIFY_MATCHMAKER_PLAYER_LEFT.py  PUT_CUSTOM_FLAG.py  READ_GAME_SERVERS.py  READ_RANKING.py  REFRESH_GAMESERVER_INSTANCE_STATE.py  REGISTER_ACCOUNT.py  REGISTER_GAMESERVER_INSTANCE.py  REQUEST_ACCOUNT_RECOVERY_DATA.py  REQUEST_ACCOUNT_UPGRADE_CODE.py  UNREGISTER_GAMESERVER_INSTANCE.py  UPDATE_PLAYER_DATA.py  UPDATE_PLAYER_READONLY_DATA.py  UPGRADE_ACCOUNT.py  VALIDATE_MACTHMAKER_TICKET.py  _GET_RESOURCE.py  __init__.py  merge_leafs.py  sendmail.py
account-server/test_stuff/: car_body.py  client_ball.py  client_ball_extra.py  collision_body.py  colors.py  draw.py  server_ball.py  server_snake.py  snapshots.py  snapshots_extra.py
game-server/: gameserver.cfg  launcher.cfg  monitor.cfg
game-server-golang/: README.txt  go.work
game-server-golang/common/: common.go
game-server-golang/common/pool/: objectpool.go
game-server-golang/docs/: Compilar gameclient WASM.txt  Workspace, modules y packages.txt
game-server-golang/gameclient/: README.txt  game.go  go.mod  go.sum  iface.go  main.go
game-server-golang/gameclient/docs/: BuildWASM.txt  WebSockets.txt
game-server-golang/gameclient/wasm/: index.html  webserver.bat  webserver.py
game-server-golang/gameserver/: config.go  ds.go.unused  gameserver.go  go.mod  go.sum  gogameserver.cfg  main.go  websockets_api.go
game-server-golang/gameserver/engine/: engine.go
game-server-golang/gameserver/entity/: entity.go  entity_manager.go  stateable.go
game-server-golang/gameserver/slots/: slots.go
game-server-golang/gameserver/tank/: tank.go
game-server-golang/test/: test.go
game-server/docs/: Dependencias.txt  IMPORTANTE - Compilar con VS para Linux.txt  LanzarProcesosSupervisados.txt  Nohup.txt  Pasos para instalar accountserver en linux.txt  Pasos para instalar gameserver en linux.txt  riger.gameserver.model.graphml
game-server/pool/: objectpool.h  stackpool.h  staticpool.h
game-server/src/: CMakeLists.txt  CMakePresets.json
game-server/src/gameserver/: CMakeLists.txt  engine_context.cpp  engine_context.h  handshake.h  main.cpp  packet_builder.cpp  packet_builder.h  protocol.cpp  protocol.h
game-server/src/gameserver/config/: config.cpp  config.h  config.h.bak
game-server/src/gameserver/core/: CMakeLists.txt  buffer_allocator.h  circulararray.h  circularbuffer.h  circularbufferbase.h  defs.h  doublebuffer.h  endian.cpp  endian.h  error_macros.cpp  error_macros.h  fastboolmap.h  grid_locator.h  grid_locator.h.bak  idr.h  intpoint.h  intrect.h  json_types.cpp  json_types.h  logger.cpp  logger.h  signals.cpp  signals.h  timers.cpp  timers.h  trace.cpp  trace.h  types.h  utils.cpp  utils.cpp.bak  utils.h  utils.h.bak
game-server/src/gameserver/core/channels/: channel.cpp
game-server/src/gameserver/core/json/include/: json.hpp
game-server/src/gameserver/core/math/: math_2d.cpp  math_2d.h  math_funcs.cpp  math_funcs.h  typedefs.h
game-server/src/gameserver/core/mbedtls/: CMakeLists.txt
game-server/src/gameserver/core/mbedtls/src/: ssl_tls.c  x509_crl.c
game-server/src/gameserver/core/pool/: noniterable_objectpool.h
game-server/src/gameserver/core/stlplus/: file_system.cpp
game-server/src/gameserver/core/uwebsockets/: App.h  AsyncSocket.h  AsyncSocketData.h  BloomFilter.h  HttpResponse.h  HttpRouter.h  Loop.h  MoveOnlyFunction.h  PerMessageDeflate.h  ProxyParser.h  QueryParser.h  TopicTree.h  WebSocketContext.h  WebSocketHandshake.h  version.txt
game-server/src/monitor/: CMakeLists.txt  bots_controller.cpp  bots_controller.h  client_protocol.cpp  client_protocol.h  main.cpp  packet_builder.cpp  packet_builder.h
game-server/src/monitor/config/: config.cpp  config.h
game-server/tools/: do-backup.bat  launch-account-server.bat
game-server/uwebsockets/: HttpContext.h  HttpContextData.h  HttpParser.h  HttpResponseData.h  LoopData.h  MessageParser.h  Multipart.h  Utilities.h  WebSocket.h  WebSocketContextData.h  WebSocketData.h  WebSocketExtensions.h  WebSocketProtocol.h
resource-server/: LEEME.txt
resource-server/root/games/: LEEME.txt
(+67 files in other folders)
