add_subdirectory( core )

add_executable ( gameserver
    "engine_context.cpp"
    "engine_context.h"
    "handshake.h"
    "main.cpp"
    "packet_builder.cpp"
    "packet_builder.h"
    "protocol.cpp"
    "protocol.h"
    "config/config.cpp"
    "config/config.h"
    "engine/iavatar.h"
    "engine/ientity.h"
    "engine/igmap.h"
    "engine/ihut.h"
    "engine/iinput_state.h"
    "engine/imeal.h"
    "engine/ipaint.h"
    "engine/iplayer.h"
    "engine/irace.h"
    "engine/isession.h"
    "engine/itank.h"
    "engine/itracker.h"
    "engine/iview.h"
    "engine/simple/actionable.h"
    "engine/simple/avatar.h"
    "engine/simple/b2_context.cpp"
    "engine/simple/b2_context.h"
    "engine/simple/cell_locatable.h"
    "engine/simple/cell_locatable_entity_manager.cpp"
    "engine/simple/cell_locatable_entity_manager.h"
    "engine/simple/circuit.cpp"
    "engine/simple/circuit.h"
    "engine/simple/collision_manager.cpp"
    "engine/simple/collision_manager.h"
    "engine/simple/context.cpp"
    "engine/simple/context.h"
    "engine/simple/controllable.h"
    "engine/simple/defs.h"
    "engine/simple/engine.cpp"
    "engine/simple/engine.h"
    "engine/simple/entity.h"
    "engine/simple/entity_manager.cpp"
    "engine/simple/entity_manager.h"
    "engine/simple/gmap.cpp"
    "engine/simple/gmap.h"
    "engine/simple/gmap_component.h"
    "engine/simple/gmap_config.cpp"
    "engine/simple/gmap_config.h"
    "engine/simple/gmap_manager.cpp"
    "engine/simple/gmap_manager.h"
    "engine/simple/hut.cpp"
    "engine/simple/hut.h"
    "engine/simple/hut_manager.cpp"
    "engine/simple/hut_manager.h"
    "engine/simple/modeable.h"
    "engine/simple/needstepable.h"
    "engine/simple/paints.cpp"
    "engine/simple/paints.h"
    "engine/simple/pass_constructible.h"
    "engine/simple/player.cpp"
    "engine/simple/player.h"
    "engine/simple/player_manager.cpp"
    "engine/simple/player_manager.h"
    "engine/simple/race.cpp"
    "engine/simple/race.h"
    "engine/simple/radar.cpp"
    "engine/simple/radar.h"
    "engine/simple/ranking.cpp"
    "engine/simple/ranking.h"
    "engine/simple/renderable.h"
    "engine/simple/spawn_manager.cpp"
    "engine/simple/spawn_manager.h"
    "engine/simple/stateable.h"
    "engine/simple/static_body_manager.h"
    "engine/simple/chap.cpp"
    "engine/simple/chap.h"
    "engine/simple/chap_manager.cpp"
    "engine/simple/chap_manager.h"
    "engine/simple/tank.cpp"
    "engine/simple/tank.h"
    "engine/simple/tank_manager.cpp"
    "engine/simple/tank_manager.h"
    "engine/simple/tiles.cpp"
    "engine/simple/tiles.h"
    "engine/simple/time.cpp"
    "engine/simple/time.h"
    "engine/simple/tmp"
    "engine/simple/tracker.cpp"
    "engine/simple/tracker.h"
    "engine/simple/tracker_manager.cpp"
    "engine/simple/tracker_manager.h"
    "engine/simple/view.cpp"
    "engine/simple/view.h"
    "engine/simple/view_manager.cpp"
    "engine/simple/view_manager.h"
    "engine/simple/view_renderer.cpp"
    "engine/simple/view_renderer.h"
    "engine/simple/world_blocks.cpp"
    "engine/simple/world_blocks.h"
    "engine/simple/cell/block.h"
    "engine/simple/cell/cell.h"
    "engine/simple/cell/cell_data_iterator.h"
    "engine/simple/cell/common.h"
    "engine/simple/cell/iterator.h"
    "engine/simple/cell/location.h"
    "engine/simple/cell/map.h"
    "game/tanks/tank_config.h"
    "game/tanks/tank_environment.h"
    "game/tanks/tank_model.h"
    "game/tanks/tanks_game_context.cpp"
    "game/tanks/tanks_game_context.h"
    "main/cmain.cpp"
    "main/cmain.h"
    "main/main_loop.cpp"
    "main/main_loop.h"
    "modules/event/event_manager.cpp"
    "modules/event/event_manager.h"
    "modules/event/events.h"
    "modules/event/request.h"
    "modules/game_context/game_context.cpp"
    "modules/game_context/game_context.h"
    "modules/game_context/game_session.cpp"
    "modules/game_context/game_session.h"
    "modules/game_context/play_session.cpp"
    "modules/game_context/play_session.h"
    "modules/game_context/room.cpp"
    "modules/game_context/room.h"
    "modules/launcher/launcher_client.cpp"
    "modules/launcher/launcher_client.h"
    "modules/origin_client/origin_client.cpp"
    "modules/origin_client/origin_client.h"
    "modules/main_server_client/controller.cpp"
    "modules/main_server_client/controller.h"
    "modules/main_server_client/debug_controller.cpp"
    "modules/main_server_client/debug_controller.h"
    "modules/main_server_client/icontroller.cpp"
    "modules/main_server_client/icontroller.h"
    "modules/main_server_client/request_coder.cpp"
    "modules/main_server_client/request_coder.h"
    "modules/main_server_client/resource_download_manager.cpp"
    "modules/main_server_client/resource_download_manager.h"
    "modules/main_server_client/resource_manager.cpp"
    "modules/main_server_client/resource_manager.h"
    "modules/user/account_session.h"
    "modules/user/packet_parser.cpp"
    "modules/user/packet_parser.h"
    "modules/user/resource_uploader.cpp"
    "modules/user/resource_uploader.h"
    "modules/user/user.cpp"
    "modules/user/user.h"
    "modules/user/user_manager.cpp"
    "modules/user/user_manager.h"
    "modules/ws/defs.h"
    "modules/ws/slot.cpp"
    "modules/ws/slot.h"
    "modules/ws/ws_server.cpp"
    "modules/ws/ws_server.h"
    "modules/ws/ws_server_v2.cpp"
    "modules/ws/ws_server_v2.h"
    "modules/ws/ws_server_listen_params.h"
)

target_link_libraries (gameserver core uws usockets box2d mbedtls cppcodec 
    /lib/x86_64-linux-gnu/libuv.so.1 
    /lib/x86_64-linux-gnu/libssl.so 
    /lib/x86_64-linux-gnu/libxmlsec1-openssl.so.1 
    /lib/x86_64-linux-gnu/libcrypto.so.1.1  
    /lib/x86_64-linux-gnu/libz.so.1)

target_include_directories(gameserver PUBLIC "." ".." "../thirdparty")
target_compile_definitions(gameserver PUBLIC GAME_SERVER JSON_NOEXCEPTION USE_LIBUV)
target_compile_options(gameserver PUBLIC "-fpermissive" "-std=c++17" )
 


